--- a/package.json
+++ b/package.json
@@ -3,26 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reduxjs/toolkit": "^2.0.1",
+    "@reduxjs/toolkit": "^2.6.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "apexcharts": "^3.44.1",
-    "axios": "^1.6.2",
+    "apexcharts": "^4.5.0",
+    "axios": "^1.8.4",
+    "emoji-picker-react": "^4.12.2",
+    "framer-motion": "^12.7.4",
     "jwt-decode": "^4.0.0",
-    "moment": "^2.29.4",
+    "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-redux": "^9.0.1",
-    "react-router-dom": "^6.20.1",
+    "react-router-dom": "^6.30.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
+    "react-tooltip": "^5.28.1",
     "react-window": "^1.8.10",
     "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.7.2",
+    "sweetalert2": "^11.17.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
